--- a/src/messages/styles/main.css
+++ b/src/messages/styles/main.css
@@ -18,25 +18,28 @@ html, body {
   font-family: 'Roboto', 'Helvetica', sans-serif;
 }
 main, #messages-card {
-  min-width: 85%;
-  height: 90%;
-  margin-top: 20px;
+  min-width: 60%;
+  height: 95%;
+  margin-top: 10px;
+  margin-bottom: 10px;
   padding-bottom: 0;
 }
 #messages-card-container {
-  height: calc(100% - 10px);
+  height: calc(100%);
   padding-bottom: 0;
 }
 #messages-card {
-  margin-top: 15px;
-  margin-left: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 30%;
 }
 .mdl-layout__header-row span {
-  margin-left: 15px;
-  margin-top: 17px;
+  /*margin-left: 15px;
+  margin-top: 17px;*/
 }
 .mdl-grid {
-  max-width: 1200px;
+  max-width: 1150px;
+
 }
 .material-icons {
   font-size: 36px;
@@ -190,10 +193,10 @@ main, #messages-card {
   }
 }
 .mdl-textfield__label:after {
-  background-color: #0288D1;
+  background-color: #FF758A;
 }
 .mdl-textfield--floating-label.is-focused .mdl-textfield__label {
-  color: #0288D1;
+  color: #FF758A;
 }
 .mdl-button .material-icons {
   top: -1px;
