--- a/src/basicinfo/assets/css/Login-Form-Clean.css
+++ b/src/basicinfo/assets/css/Login-Form-Clean.css
@@ -1,6 +1,7 @@
 .login-clean {
   background:#f1f7fc;
-  padding:80px 0;
+  padding:80px;
+  height: 100%;
 }
 
 .login-clean form {
@@ -8,7 +9,6 @@
   width:100%;
   margin:0 auto;
   background-color:#ffffff;
-  padding:40px;
   /*border-radius:4px;*/
   color:#505e6c;
   box-shadow:none;
