--- a/src/homepage/materialize/css/materialize.css
+++ b/src/homepage/materialize/css/materialize.css
@@ -1020,11 +1020,11 @@
 }
 
 .teal.lighten-1 {
-  background-color: #26a69a !important;
+  background-color: #FF758A !important;
 }
 
 .teal-text.text-lighten-1 {
-  color: #26a69a !important;
+  color: #FF758A !important;
 }
 
 .teal.darken-1 {
@@ -3081,7 +3081,7 @@ td, th {
 }
 
 .collection .collection-item.active {
-  background-color: #26a69a;
+  background-color: #FF758A;
   color: #eafaf9;
 }
 
@@ -3093,7 +3093,7 @@ td, th {
   display: block;
   -webkit-transition: .25s;
   transition: .25s;
-  color: #26a69a;
+  color: #FF758A;
 }
 
 .collection a.collection-item:not(.active):hover {
@@ -3116,7 +3116,7 @@ td, th {
 
 .secondary-content {
   float: right;
-  color: #26a69a;
+  color: #FF758A;
 }
 
 .collapsible .collection {
@@ -3155,13 +3155,13 @@ td, th {
   top: 0;
   left: 0;
   bottom: 0;
-  background-color: #26a69a;
+  background-color: #FF758A;
   -webkit-transition: width .3s linear;
   transition: width .3s linear;
 }
 
 .progress .indeterminate {
-  background-color: #26a69a;
+  background-color: #FF758A;
 }
 
 .progress .indeterminate:before {
@@ -4900,7 +4900,7 @@ small {
 }
 
 .card .card-action a:not(.btn):not(.btn-large):not(.btn-large):not(.btn-floating):hover {
-  color: #ffd8a6;
+  color: #FF758A;
 }
 
 .card .card-reveal {
@@ -5215,7 +5215,7 @@ small {
 .btn, .btn-large {
   text-decoration: none;
   color: #fff;
-  background-color: #26a69a;
+  background-color: #FF758A;
   text-align: center;
   letter-spacing: .5px;
   -webkit-transition: .2s ease-out;
@@ -5224,7 +5224,7 @@ small {
 }
 
 .btn:hover, .btn-large:hover {
-  background-color: #2bbbad;
+  background-color: #FF758A;
 }
 
 .btn-floating {
@@ -5237,7 +5237,7 @@ small {
   height: 40px;
   line-height: 40px;
   padding: 0;
-  background-color: #26a69a;
+  background-color: #FF758A;
   border-radius: 50%;
   -webkit-transition: .3s;
   transition: .3s;
@@ -5246,7 +5246,7 @@ small {
 }
 
 .btn-floating:hover {
-  background-color: #26a69a;
+  background-color: #FF758A;
 }
 
 .btn-floating:before {
@@ -5398,7 +5398,7 @@ button.btn-floating {
   z-index: -1;
   width: 40px;
   height: 40px;
-  background-color: #26a69a;
+  background-color: #FF758A;
   border-radius: 50%;
   -webkit-transform: scale(0);
           transform: scale(0);
@@ -5871,9 +5871,9 @@ button.btn-floating {
 }
 
 .chips.focus {
-  border-bottom: 1px solid #26a69a;
-  -webkit-box-shadow: 0 1px 0 0 #26a69a;
-          box-shadow: 0 1px 0 0 #26a69a;
+  border-bottom: 1px solid #FF758A;
+  -webkit-box-shadow: 0 1px 0 0 #FF758A;
+          box-shadow: 0 1px 0 0 #FF758A;
 }
 
 .chips:hover {
@@ -5881,7 +5881,7 @@ button.btn-floating {
 }
 
 .chips .chip.selected {
-  background-color: #26a69a;
+  background-color: #FF758A;
   color: #fff;
 }
 
@@ -6100,9 +6100,9 @@ input[type=tel]:not(.browser-default):focus:not([readonly]),
 input[type=number]:not(.browser-default):focus:not([readonly]),
 input[type=search]:not(.browser-default):focus:not([readonly]),
 textarea.materialize-textarea:focus:not([readonly]) {
-  border-bottom: 1px solid #26a69a;
-  -webkit-box-shadow: 0 1px 0 0 #26a69a;
-          box-shadow: 0 1px 0 0 #26a69a;
+  border-bottom: 1px solid #FF758A;
+  -webkit-box-shadow: 0 1px 0 0 #FF758A;
+          box-shadow: 0 1px 0 0 #FF758A;
 }
 
 input:not([type]):focus:not([readonly]) + label,
@@ -6118,7 +6118,7 @@ input[type=tel]:not(.browser-default):focus:not([readonly]) + label,
 input[type=number]:not(.browser-default):focus:not([readonly]) + label,
 input[type=search]:not(.browser-default):focus:not([readonly]) + label,
 textarea.materialize-textarea:focus:not([readonly]) + label {
-  color: #26a69a;
+  color: #FF758A;
 }
 
 input:not([type]).validate + label,
@@ -6406,7 +6406,7 @@ textarea.materialize-textarea + label:after, .select-wrapper + label:after {
 }
 
 .input-field .prefix.active {
-  color: #26a69a;
+  color: #FF758A;
 }
 
 .input-field .prefix ~ input,
@@ -6610,23 +6610,29 @@ textarea.materialize-textarea.validate + label:not(.label-icon).active {
 [type="radio"]:checked + label:after,
 [type="radio"].with-gap:checked + label:before,
 [type="radio"].with-gap:checked + label:after {
-  border: 2px solid #26a69a;
+  border: 2px solid white;
 }
 
 [type="radio"]:checked + label:after,
 [type="radio"].with-gap:checked + label:after {
-  background-color: #26a69a;
+  background-color: white;
+  border: 2px solid white;
+  color:white;
 }
 
 [type="radio"]:checked + label:after {
   -webkit-transform: scale(1.02);
           transform: scale(1.02);
+   border: 2px solid white;
+  color:white;
 }
 
 /* Radio With gap */
 [type="radio"].with-gap:checked + label:after {
   -webkit-transform: scale(0.5);
           transform: scale(0.5);
+  border: 2px solid white;
+  color:white;
 }
 
 /* Focused styles */
@@ -6747,8 +6753,8 @@ form p:last-child {
   height: 22px;
   border-top: 2px solid transparent;
   border-left: 2px solid transparent;
-  border-right: 2px solid #26a69a;
-  border-bottom: 2px solid #26a69a;
+  border-right: 2px solid #FF758A;
+  border-bottom: 2px solid #FF758A;
   -webkit-transform: rotate(40deg);
           transform: rotate(40deg);
   -webkit-backface-visibility: hidden;
@@ -6770,7 +6776,7 @@ form p:last-child {
   height: 22px;
   border-top: none;
   border-left: none;
-  border-right: 2px solid #26a69a;
+  border-right: 2px solid #FF758A;
   border-bottom: none;
   -webkit-transform: rotate(90deg);
           transform: rotate(90deg);
@@ -6840,8 +6846,8 @@ form p:last-child {
   top: 0;
   width: 20px;
   height: 20px;
-  border: 2px solid #26a69a;
-  background-color: #26a69a;
+  border: 2px solid #FF758A;
+  background-color: #FF758A;
   z-index: 0;
 }
 
@@ -6853,8 +6859,8 @@ form p:last-child {
 
 [type="checkbox"].filled-in.tabbed:checked:focus + label:after {
   border-radius: 2px;
-  background-color: #26a69a;
-  border-color: #26a69a;
+  background-color: #FF758A;
+  border-color: #FF758A;
 }
 
 [type="checkbox"].filled-in:disabled:not(:checked) + label:before {
@@ -6906,7 +6912,7 @@ form p:last-child {
 }
 
 .switch label input[type=checkbox]:checked + .lever:after {
-  background-color: #26a69a;
+  background-color: #FF758A;
 }
 
 .switch label .lever {
@@ -7206,7 +7212,7 @@ input[type=range] + .thumb {
   height: 0;
   width: 0;
   border-radius: 50%;
-  background-color: #26a69a;
+  background-color: #FF758A;
   margin-left: 7px;
   -webkit-transform-origin: 50% 50%;
           transform-origin: 50% 50%;
@@ -7218,7 +7224,7 @@ input[type=range] + .thumb .value {
   display: block;
   width: 30px;
   text-align: center;
-  color: #26a69a;
+  color: #FF758A;
   font-size: 0;
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
@@ -7251,7 +7257,7 @@ input[type=range]::-webkit-slider-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background-color: #26a69a;
+  background-color: #FF758A;
   -webkit-transform-origin: 50% 50%;
           transform-origin: 50% 50%;
   margin: -5px 0 0 0;
@@ -7280,7 +7286,7 @@ input[type=range]::-moz-range-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #26a69a;
+  background: #FF758A;
   margin-top: -5px;
 }
 
@@ -7315,7 +7321,7 @@ input[type=range]::-ms-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #26a69a;
+  background: #FF758A;
 }
 
 input[type=range]:focus::-ms-fill-lower {
@@ -7441,11 +7447,11 @@ input[type=range]:focus::-ms-fill-upper {
 }
 
 .side-nav li > a.btn:hover, .side-nav li > a.btn-large:hover, .side-nav li > a.btn-large:hover {
-  background-color: #2bbbad;
+  background-color: #FF758A;
 }
 
 .side-nav li > a.btn-floating:hover {
-  background-color: #26a69a;
+  background-color: #FF758A;
 }
 
 .side-nav li > a > i,
@@ -7667,7 +7673,7 @@ input[type=range]:focus::-ms-fill-upper {
   width: 100%;
   height: 100%;
   opacity: 0;
-  border-color: #26a69a;
+  border-color: #FF758A;
 }
 
 .spinner-blue,
@@ -8989,7 +8995,7 @@ input[type=range]:focus::-ms-fill-upper {
 }*/
 .picker__date-display {
   text-align: left;
-  background-color: #26a69a;
+  background-color: #FF758A;
   color: #fff;
   padding: 18px;
   font-weight: 300;
@@ -9075,7 +9081,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 
 .picker__day.picker__day--today {
-  color: #26a69a;
+  color: #FF758A;
 }
 
 .picker__day.picker__day--today.picker__day--selected {
@@ -9092,7 +9098,7 @@ input[type=range]:focus::-ms-fill-upper {
   border-radius: 50%;
   -webkit-transform: scale(0.9);
           transform: scale(0.9);
-  background-color: #26a69a;
+  background-color: #FF758A;
   color: #ffffff;
 }
 
@@ -9110,7 +9116,7 @@ input[type=range]:focus::-ms-fill-upper {
 .picker__close, .picker__today, .picker__clear {
   font-size: 1.1rem;
   padding: 0 1rem;
-  color: #26a69a;
+  color: #FF758A;
 }
 
 .picker__clear {
@@ -9413,20 +9419,20 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
 
 .clockpicker-canvas-bearing {
   stroke: none;
-  fill: #26a69a;
+  fill: #FF758A;
 }
 
 .clockpicker-canvas-bg {
   stroke: none;
-  fill: #26a69a;
+  fill: #FF758A;
 }
 
 .clockpicker-canvas-bg-trans {
-  fill: #26a69a;
+  fill: #FF758A;
 }
 
 .clockpicker-canvas line {
-  stroke: #26a69a;
+  stroke: #FF758A;
   stroke-width: 4;
   stroke-linecap: round;
   /*shape-rendering: crispEdges;*/
