--- a/src/homepage/materialize/css/materialize.css
+++ b/src/homepage/materialize/css/materialize.css
@@ -5209,7 +5209,7 @@ small {
 
 .btn:focus, .btn-large:focus,
 .btn-floating:focus {
-  background-color: #1d7d74;
+  background-color: #FF758A;
 }
 
 .btn, .btn-large {
@@ -5973,7 +5973,7 @@ select:focus {
 
 button:focus {
   outline: none;
-  background-color: #2ab7a9;
+  background-color: #FF748A;
 }
 
 label {
