--- a/src/welcome/assets/css/styles.css
+++ b/src/welcome/assets/css/styles.css
@@ -31,3 +31,14 @@ color: white !important;
 ::-ms-input-placeholder { /* Microsoft Edge */
    color:    white;
 }
+
+#welcomeCard {
+    background: -webkit-linear-gradient(bottom right,transparent,#7cdffd); /*Safari 5.1-6*/
+    background: -o-linear-gradient(bottom right,#6ED2FF,#7cdffd); /*Opera 11.1-12*/
+    background: -moz-linear-gradient(bottom right,#6ED2FF,#7cdffd); /*Fx 3.6-15*/
+    background: linear-gradient(bottom right, #6ED2FF, #7cdffd);
+}
+
+.userinfo{
+   background-color: #5DCBFF;
+}
