--- a/src/homepage/css/results.css
+++ b/src/homepage/css/results.css
@@ -133,14 +133,14 @@ select option {
   text-align: center; }
   .palette .wrapper {
     border: 1px solid transparent;
-    border-radius: 0px;
+    border-radius: 1px;
     height: 100%;
     display: flex;
     flex-flow: column; }
     .palette .wrapper .colors {
       height: 100%;
       display: flex;
-      flex-direction: column; }
+      flex-direction: row; }
     .palette .wrapper .color {
       text-transform: lowercase;
       height: 100%;
