--- a/src/messages/styles/main.css
+++ b/src/messages/styles/main.css
@@ -19,30 +19,30 @@ html, body {
 }
 main, #messages-card {
   min-width: 60%;
-  height: 95%;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  padding-bottom: 0;
+  height: 98%;
+  margin-top: 2px;
+  margin-bottom: 5px;
+  padding-bottom: 10px;
 }
 #messages-card-container {
   height: calc(100%);
   padding-bottom: 0;
 }
 #messages-card {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 30%;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 23%;
 }
 .mdl-layout__header-row span {
   /*margin-left: 15px;
   margin-top: 17px;*/
 }
 .mdl-grid {
-  max-width: 1150px;
+  width: 100%;
 
 }
 .material-icons {
-  font-size: 36px;
+  font-size: 24px;
   top: 8px;
   position: relative;
 }
@@ -69,7 +69,7 @@ main, #messages-card {
 }
 .message-container {
   display: block;
-  margin-top: 10px;
+  margin-top: 5px;
   border-top: 1px solid #f3f3f3;
   padding-top: 10px;
   opacity: 0;
@@ -137,9 +137,9 @@ main, #messages-card {
   top: 22px;
   width: auto;
   right: 0;
-  padding-left: 10px;
+  padding-left: 5px;
   justify-content: flex-start;
-  padding-right: 10px;
+  padding-right: 5px;
 }
 #user-container #user-pic {
   top: -3px;
@@ -156,7 +156,7 @@ main, #messages-card {
   font-size: 16px;
   line-height: 36px;
   padding-right: 10px;
-  padding-left: 20px;
+  padding-left: 15px;
 }
 #image-form #submitImage {
   width: auto;
