--- a/src/support/assets/css/style.css
+++ b/src/support/assets/css/style.css
@@ -1,17 +1,16 @@
-.dropzone-previews .dz-preview {
-	margin: 0px;
-	margin-bottom: 10px;
-}
 
-.dropzone-previews .dz-preview .dz-image {
-    width: 100px;
-    height: 100px;
-	margin-bottom: 15px;
-	display: block;
-	margin: auto;
-}
-
-.drp-image > img{
-	display: block;
-	margin: auto;
+@media only screen and (min-width: 500px) {
+    /* For tablets: */
+    .col-m-1 {width: 8.33%;}
+    .col-m-2 {width: 16.66%;}
+    .col-m-3 {width: 25%;}
+    .col-m-4 {width: 33.33%;}
+    .col-m-5 {width: 41.66%;}
+    .col-m-6 {width: 50%;}
+    .col-m-7 {width: 58.33%;}
+    .col-m-8 {width: 66.66%;}
+    .col-m-9 {width: 75%;}
+    .col-m-10 {width: 83.33%;}
+    .col-m-11 {width: 91.66%;}
+    .col-m-12 {width: 100%;}
 }
